Change packages Generated Files
-Change package location generated files
