# src/main/java/cl/lgutierrez/example/app/infraestructure/controller/UserController.java
@@ -1,14 +1,14 @@
 package cl.lgutierrez.example.app.infraestructure.controller;
 
-import cl.lgutierrez.example.app.UsuariosApi;
+import cl.lgutierrez.example.app.api.UsuariosApi;
+import cl.lgutierrez.example.app.api.model.CreateUserDto;
+import cl.lgutierrez.example.app.api.model.GetUserDto;
+import cl.lgutierrez.example.app.api.model.GetUsersDto;
 import cl.lgutierrez.example.app.domain.model.User;
 import cl.lgutierrez.example.app.domain.port.input.CreateUser;
 import cl.lgutierrez.example.app.domain.port.input.FindUserById;
 import cl.lgutierrez.example.app.infraestructure.controller.mapper.todomain.CreateUserDtoToUserMapper;
 import cl.lgutierrez.example.app.infraestructure.controller.mapper.todto.UserToGetUserDtoMapper;
-import cl.lgutierrez.example.app.model.CreateUserDto;
-import cl.lgutierrez.example.app.model.GetUserDto;
-import cl.lgutierrez.example.app.model.GetUsersDto;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
